---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: function_with_return.cm
============================================================
Source code:
func identity(x: felt) -> felt {
    let y = x;
    return y;
}
============================================================
Generated CASM:
identity:
   0: 4 -4 _ 0             // Store: [fp + 0] = [fp + -4]
   1: 4 0 _ -3             // Return value 0: [fp -3] = [fp + 0]
   2: 12 _ _ _             // return
